<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="MAIN" Id="{4f5b4da9-0ef4-4686-bbe2-392a45f36b5e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	MakingCoffee : fbMaking_Coffee;
	MakingToast : fbMaking_Toast;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[MakingCoffee(Grinding := GVL.ix_GrindButton, ToastState := GVL.ToastState, GetOffBed := GVL.ix_Wakeup, HeatButton := GVL.ix_HeatingUp, Start := GVL.ix_Start, CoffeeMakingState => GVL.CoffeeState);
MakingToast(LeverDown := GVL.ix_LeverButton, BreadInserted := GVL.ix_InsertedButton, CoffeeState := GVL.CoffeeState, MakingToastState => GVL.ToastState);

IF GVL.ox_CoffeeDone AND GVL.ox_ToastDone THEN
	GVL.BreakfastReady := TRUE;  // The breakfast is fully ready when both coffee and toast are done
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>